--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ingeniarch Labs · Receipt Logger</title>
-
-  <!-- Tailwind (CDN) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
+  <title>Ingeniarch Labs · Receipt Logger</title>  <!-- Tailwind (CDN) -->  <script src="https://cdn.tailwindcss.com"></script>  <script>
     tailwind.config = {
       theme: {
         extend: {
@@ -23,24 +18,11 @@
       },
       darkMode: 'class'
     }
-  </script>
-
-  <!-- OCR & Cloud SDKs -->
-  <script src="https://unpkg.com/tesseract.js@5.1.1/dist/tesseract.min.js"></script>
-  <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
-  <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
-  <script src="https://alcdn.msauth.net/browser/2.38.0/js/msal-browser.min.js"></script>
-
-  <!-- Excel export (with images) -->
-  <script src="https://cdn.jsdelivr.net/npm/exceljs@4.4.0/dist/exceljs.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
-
-  <style>
+  </script>  <!-- OCR & Cloud SDKs -->  <script src="https://unpkg.com/tesseract.js@5.1.1/dist/tesseract.min.js"></script>  <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>  <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>  <script src="https://alcdn.msauth.net/browser/2.38.0/js/msal-browser.min.js"></script>  <!-- Excel export (with images) -->  <script src="https://cdn.jsdelivr.net/npm/exceljs@4.4.0/dist/exceljs.min.js"></script>  <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>  <style>
     html, body { height: 100%; }
     .glass { background: linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02)); backdrop-filter: blur(6px); }
     .grid-auto { grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); }
-  </style>
-</head>
+  </style></head>
 <body class="min-h-full bg-bg text-text">
   <div class="max-w-4xl mx-auto p-3 sm:p-6">
     <!-- Header -->
@@ -58,132 +40,131 @@
         </div>
       </div>
       <button id="toggle-theme" class="text-xs px-3 py-2 rounded-xl bg-brand-700 hover:bg-brand-600 transition shadow-card">Theme</button>
-    </header>
+    </header><!-- Cloud auth -->
+<section class="glass shadow-card rounded-brand p-3 sm:p-4 border border-bg-line mb-4">
+  <div class="grid grid-auto gap-3">
+    <div>
+      <label class="text-xs block mb-1">Cloud</label>
+      <select id="cloud-provider" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm focus:outline-none">
+        <option value="none">None</option>
+        <option value="google">Google Drive</option>
+        <option value="onedrive">OneDrive</option>
+      </select>
+    </div>
+    <div>
+      <label class="text-xs block mb-1">Status</label>
+      <div id="auth-status" class="text-xs italic px-2 py-2 rounded-lg bg-bg-card border border-bg-line">Not signed in</div>
+    </div>
+    <div class="flex items-end">
+      <button id="sign-in" class="w-full text-xs px-3 py-2 rounded-xl bg-brand-600 hover:bg-brand-500 transition shadow-card">Sign In</button>
+    </div>
+  </div>
+</section>
 
-    <!-- Cloud auth -->
-    <section class="glass shadow-card rounded-brand p-3 sm:p-4 border border-bg-line mb-4">
-      <div class="grid grid-auto gap-3">
-        <div>
-          <label class="text-xs block mb-1">Cloud</label>
-          <select id="cloud-provider" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm focus:outline-none">
-            <option value="none">None</option>
-            <option value="google">Google Drive</option>
-            <option value="onedrive">OneDrive</option>
-          </select>
-        </div>
-        <div>
-          <label class="text-xs block mb-1">Status</label>
-          <div id="auth-status" class="text-xs italic px-2 py-2 rounded-lg bg-bg-card border border-bg-line">Not signed in</div>
-        </div>
-        <div class="flex items-end">
-          <button id="sign-in" class="w-full text-xs px-3 py-2 rounded-xl bg-brand-600 hover:bg-brand-500 transition shadow-card">Sign In</button>
-        </div>
-      </div>
-    </section>
-
-    <!-- Form + camera -->
-    <section class="glass shadow-card rounded-brand p-3 sm:p-4 border border-bg-line mb-4">
-      <div class="grid grid-auto gap-3">
-        <div>
-          <label class="text-xs block mb-1">Date</label>
-          <input id="date" type="date" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm">
-        </div>
-        <div>
-          <label class="text-xs block mb-1">Category</label>
-          <select id="category" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm">
-            <option>Select</option>
-            <option>Food</option>
-            <option>Travel</option>
-            <option>Supplies</option>
-            <option>Other</option>
-          </select>
-        </div>
-        <div>
-          <label class="text-xs block mb-1">Amount (£)</label>
-          <input id="amount" type="number" step="0.01" inputmode="decimal" placeholder="25.50" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm">
-        </div>
-        <div class="sm:col-span-2">
-          <label class="text-xs block mb-1">Description</label>
-          <input id="desc" type="text" placeholder="Lunch" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm">
-        </div>
-      </div>
-
-      <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-3">
-        <div>
-          <label class="text-xs block mb-1">Camera</label>
-          <!-- Hidden unless multiple back cameras are available -->
-          <select id="camera-select" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm hidden"></select>
-
-          <video id="video" autoplay playsinline class="mt-2 w-full aspect-[4/3] rounded-lg border border-bg-line"></video>
-          <img id="preview-img" alt="Preview" class="mt-2 w-full rounded-lg border border-bg-line hidden" />
-          <canvas id="canvas" class="hidden"></canvas>
-
-          <div class="flex gap-2 mt-2">
-            <button id="capture" class="flex-1 text-xs px-3 py-2 rounded-xl bg-brand-600 hover:bg-brand-500 transition shadow-card">Capture & Scan</button>
-            <button id="native-capture" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">Use Native</button>
-            <input type="file" id="file-input" accept="image/*" capture="environment" class="hidden">
-          </div>
-          <p id="ocr-status" class="text-xs text-text-muted mt-1"></p>
-        </div>
-
-        <div>
-          <label class="text-xs block mb-1">Actions</label>
-          <div class="grid grid-cols-2 gap-2">
-            <button id="log-btn" class="text-xs px-3 py-2 rounded-xl bg-good/90 hover:bg-good transition shadow-card hidden">Log</button>
-            <button id="view-logs" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">View Logs</button>
-            <button id="export-csv" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">Export CSV</button>
-            <button id="export-xlsx" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">Export Excel (.xlsx)</button>
-            <button id="import-json" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">Import JSON</button>
-            <input id="import-file" type="file" accept="application/json" class="hidden" />
-          </div>
-          <div id="toast" class="mt-3 text-xs hidden"></div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Logs -->
-    <section id="logs" class="glass shadow-card rounded-brand p-3 sm:p-4 border border-bg-line hidden">
-      <div class="flex items-center justify-between mb-2">
-        <h2 class="text-sm font-semibold">Saved Logs</h2>
-        <div class="flex gap-2">
-          <select id="month-filter" class="text-xs bg-bg-card border border-bg-line rounded-lg px-2 py-1">
-            <option value="all">All months</option>
-          </select>
-          <button id="clear-logs" class="text-xs px-3 py-1.5 rounded-xl bg-bad/80 hover:bg-bad">Clear All</button>
-        </div>
-      </div>
-      <div class="overflow-x-auto">
-        <table class="w-full text-sm">
-          <thead class="text-left text-xs text-text-muted border-b border-bg-line">
-            <tr>
-              <th class="py-2 pr-2">Date</th>
-              <th class="py-2 pr-2">Cat</th>
-              <th class="py-2 pr-2">Amt (£)</th>
-              <th class="py-2 pr-2">Desc</th>
-              <th class="py-2 pr-2">Photo</th>
-              <th class="py-2 pr-2">Cloud</th>
-              <th class="py-2 pr-2">Del</th>
-            </tr>
-          </thead>
-          <tbody id="log-tbody"></tbody>
-        </table>
-      </div>
-      <div class="mt-3 flex items-center justify-between">
-        <p id="total-amount" class="text-sm"></p>
-        <p id="count-info" class="text-xs text-text-muted"></p>
-      </div>
-    </section>
+<!-- Form + camera -->
+<section class="glass shadow-card rounded-brand p-3 sm:p-4 border border-bg-line mb-4">
+  <div class="grid grid-auto gap-3">
+    <div>
+      <label class="text-xs block mb-1">Date</label>
+      <input id="date" type="date" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm">
+    </div>
+    <div>
+      <label class="text-xs block mb-1">Category</label>
+      <select id="category" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm">
+        <option>Select</option>
+        <option>Food</option>
+        <option>Travel</option>
+        <option>Supplies</option>
+        <option>Other</option>
+      </select>
+    </div>
+    <div>
+      <label class="text-xs block mb-1">Amount (£)</label>
+      <input id="amount" type="number" step="0.01" inputmode="decimal" placeholder="25.50" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm">
+    </div>
+    <div class="sm:col-span-2">
+      <label class="text-xs block mb-1">Description</label>
+      <input id="desc" type="text" placeholder="Lunch" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm">
+    </div>
   </div>
 
-  <!-- Image popup -->
-  <div id="popup" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
+  <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-3">
+    <div>
+      <label class="text-xs block mb-1">Camera</label>
+      <!-- Hidden unless multiple back cameras are available -->
+      <select id="camera-select" class="w-full bg-bg-card border border-bg-line rounded-lg px-2 py-2 text-sm hidden"></select>
+
+      <video id="video" autoplay playsinline class="mt-2 w-full aspect-[4/3] rounded-lg border border-bg-line"></video>
+      <img id="preview-img" alt="Preview" class="mt-2 w-full rounded-lg border border-bg-line hidden" />
+      <canvas id="canvas" class="hidden"></canvas>
+
+      <div class="flex flex-wrap gap-2 mt-2">
+        <button id="capture" class="flex-1 text-xs px-3 py-2 rounded-xl bg-brand-600 hover:bg-brand-500 transition shadow-card">Capture & Scan</button>
+        <button id="native-capture" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">Use Native</button>
+        <!-- NEW: Upload from gallery / files -->
+        <button id="upload-photo" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">Upload Photo</button>
+
+        <input type="file" id="file-input" accept="image/*" capture="environment" class="hidden">
+        <!-- NEW: plain file chooser that doesn't force camera -->
+        <input type="file" id="upload-file" accept="image/*" class="hidden" />
+      </div>
+      <p id="ocr-status" class="text-xs text-text-muted mt-1"></p>
+    </div>
+
+    <div>
+      <label class="text-xs block mb-1">Actions</label>
+      <div class="grid grid-cols-2 gap-2">
+        <button id="log-btn" class="text-xs px-3 py-2 rounded-xl bg-good/90 hover:bg-good transition shadow-card hidden">Log</button>
+        <button id="view-logs" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">View Logs</button>
+        <button id="export-csv" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">Export CSV</button>
+        <button id="export-xlsx" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">Export Excel (.xlsx)</button>
+        <button id="import-json" class="text-xs px-3 py-2 rounded-xl bg-bg-card border border-bg-line">Import JSON</button>
+        <input id="import-file" type="file" accept="application/json" class="hidden" />
+      </div>
+      <div id="toast" class="mt-3 text-xs hidden"></div>
+    </div>
+  </div>
+</section>
+
+<!-- Logs -->
+<section id="logs" class="glass shadow-card rounded-brand p-3 sm:p-4 border border-bg-line hidden">
+  <div class="flex items-center justify-between mb-2">
+    <h2 class="text-sm font-semibold">Saved Logs</h2>
+    <div class="flex gap-2">
+      <select id="month-filter" class="text-xs bg-bg-card border border-bg-line rounded-lg px-2 py-1">
+        <option value="all">All months</option>
+      </select>
+      <button id="clear-logs" class="text-xs px-3 py-1.5 rounded-xl bg-bad/80 hover:bg-bad">Clear All</button>
+    </div>
+  </div>
+  <div class="overflow-x-auto">
+    <table class="w-full text-sm">
+      <thead class="text-left text-xs text-text-muted border-b border-bg-line">
+        <tr>
+          <th class="py-2 pr-2">Date</th>
+          <th class="py-2 pr-2">Cat</th>
+          <th class="py-2 pr-2">Amt (£)</th>
+          <th class="py-2 pr-2">Desc</th>
+          <th class="py-2 pr-2">Photo</th>
+          <th class="py-2 pr-2">Cloud</th>
+          <th class="py-2 pr-2">Del</th>
+        </tr>
+      </thead>
+      <tbody id="log-tbody"></tbody>
+    </table>
+  </div>
+  <div class="mt-3 flex items-center justify-between">
+    <p id="total-amount" class="text-sm"></p>
+    <p id="count-info" class="text-xs text-text-muted"></p>
+  </div>
+</section>
+
+  </div>  <!-- Image popup -->  <div id="popup" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
     <div class="bg-bg-card rounded-2xl p-3 sm:p-4 max-w-[95vw] max-h-[90vh] shadow-card border border-bg-line">
       <img id="popup-img" class="max-w-full max-h-[70vh] rounded-lg border border-bg-line" alt="Receipt" />
       <button id="close-popup" class="mt-3 w-full text-xs px-3 py-2 rounded-xl bg-brand-600 hover:bg-brand-500 transition">Close</button>
     </div>
-  </div>
-
-  <script>
+  </div>  <script>
     // ===== Brand Defaults =====
     const BRAND = { name: 'Ingeniarch Labs', storageKey: 'expenses_logs', themeKey: 'il_theme' };
 
@@ -264,6 +245,7 @@
     const authStatus = $('auth-status'), popup = $('popup'), popupImg = $('popup-img');
     const closePopup = $('close-popup'), clearLogsBtn = $('clear-logs'), cameraSelect = $('camera-select');
     const nativeCaptureBtn = $('native-capture'), fileInput = $('file-input');
+    const uploadBtn = $('upload-photo'), uploadFile = $('upload-file'); // NEW
     const toast = $('toast'), ocrStatus = $('ocr-status'), exportCsv = $('export-csv');
     const importJsonBtn = $('import-json'), importFile = $('import-file'), monthFilter = $('month-filter'), exportXlsxBtn = $('export-xlsx');
 
@@ -327,6 +309,10 @@
     nativeCaptureBtn.addEventListener('click', ()=> fileInput.click());
     fileInput.addEventListener('change', (e)=>{ if(e.target.files[0]) handleBlob(e.target.files[0]); });
 
+    // NEW: Upload from gallery/files without forcing camera
+    uploadBtn.addEventListener('click', ()=> uploadFile.click());
+    uploadFile.addEventListener('change', (e)=>{ const f = e.target.files && e.target.files[0]; if(f){ handleBlob(f); } });
+
     // ===== OCR =====
     async function processOCR(blob){
       ocrStatus.textContent = 'Scanning…';
@@ -387,7 +373,7 @@
       const desc = (descInput.value||'').trim();
       if(!desc || isNaN(amount) || amount<=0){ notify('Enter a valid amount and description.', 'warn'); return; }
       if(!/^\d{4}-\d{2}-\d{2}$/.test(date)){ notify('Invalid date.', 'warn'); return; }
-      if(!capturedBlob){ notify('Capture a photo first.', 'warn'); return; }
+      if(!capturedBlob){ notify('Capture or upload a photo first.', 'warn'); return; }
 
       const timestamp = new Date().toISOString();
       const filename = `receipt_${timestamp.replace(/[:.-]/g,'')}.jpg`;
@@ -504,6 +490,5 @@
     function updateDefaults(){ dateInput.value = todayISO(); }
     async function init(){ applyTheme(); updateDefaults(); await loadCameras(); updateAuthStatus(); refreshMonthFilter(); }
     init();
-  </script>
-</body>
+  </script></body>
 </html>
